fix: revert table cell to left-align, remove justify from td

--- a/src/styles/blogPost.module.less
+++ b/src/styles/blogPost.module.less
@@ -114,7 +114,6 @@
   td {
     background: #fdfcf9;
     color: @text-muted;
-    text-align: justify;
   }
 
   code {
